--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link rel="icon" type="image/png" href="http://www.google.com/s2/u/0/favicons?domain=siteground.com">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  
+<!-- Video -->
+<video id="video" controls height="360" width="640" hidden></video>
+<!-- Button -->
+<div class="button-container">
+  <button id="button">START</button>
+</div>
 <!-- Javascript -->
 <script src="script.js"></script>
 </body>
